<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.nicosworld</groupId>
    <artifactId>rithmo-core</artifactId>
    <version>0.2.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Rithmo Core</name>
    <description>Game orchestration layer for Rithmomachia</description>

    <!-- ===================== -->
    <!-- Properties -->
    <!-- ===================== -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <rithmo-engine.version>0.5.0-SNAPSHOT</rithmo-engine.version>

        <junit.version>5.10.0</junit.version>
        <mockito.version>5.11.0</mockito.version>
        <assertj.version>3.27.7</assertj.version>
    </properties>

    <!-- ===================== -->
    <!-- Repositories -->
    <!-- ===================== -->
    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/Phalenopsis/rithmo-engine</url>
        </repository>
    </repositories>

    <!-- ===================== -->
    <!-- Dependencies -->
    <!-- ===================== -->
    <dependencies>

        <!-- 🔗 ENGINE -->
        <dependency>
            <groupId>eu.nicosworld</groupId>
            <artifactId>rithmo-engine</artifactId>
            <version>${rithmo-engine.version}</version>
        </dependency>

        <!-- 🧪 JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- 🎭 Mockito Core -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- 🎭 Mockito JUnit 5 integration (optionnel mais recommandé) -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>eu.nicosworld</groupId>
            <artifactId>rithmo-engine</artifactId>
            <version>${rithmo-engine.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- ===================== -->
    <!-- Build -->
    <!-- ===================== -->
    <build>
        <plugins>

            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <!-- Tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/Phalenopsis/rithmo-core</url>
        </repository>
    </distributionManagement>
</project>